# OntoL-Rust-Graph

./: .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  Cargo.toml  import_entities.cypher  skills-lock.json
crates/ontology-reasoner/: CRATE_CONSTRAINTS.md  Cargo.toml
crates/ontology-reasoner/src/: error.rs  language.rs  lib.rs  logger.rs  query_plan.rs  reasoner.rs
crates/ontology-reasoner/src/confidence/: README.md  calculator.rs  fuse.rs  mod.rs  policy.rs
crates/ontology-reasoner/src/dwl2/: README.md  ast.rs  mod.rs  query.rs
crates/ontology-reasoner/src/gie/: context.rs  mod.rs  version.rs
crates/ontology-reasoner/src/gie/action/: mod.rs  router.rs
crates/ontology-reasoner/src/gie/engine/: fixpoint.rs  mod.rs
crates/ontology-reasoner/src/gie/translator/: dwl2.rs  jsonpath.rs  mod.rs  swrl.rs
crates/ontology-reasoner/src/graph/: README.md  actions.rs  detector.rs  explorer.rs  mod.rs  util.rs
crates/ontology-reasoner/src/shacl/: ast.rs  engine.rs  error.rs  mod.rs  result.rs
crates/ontology-reasoner/src/spatial/: README.md  haversine.rs  mod.rs
crates/ontology-reasoner/src/swrl/: README.md  ast.rs  behavior.rs  builtins.rs  engine.rs  mod.rs  parser.rs
crates/ontology-reasoner/src/timeline/: README.md  engine.rs  mod.rs  model.rs
crates/ontology-server/: API.md  Cargo.toml
crates/ontology-server/src/: app.rs  config.rs  main.rs  server.rs
crates/ontology-server/src/routes/: README.md  confidence_policy.rs  context.rs  entity_update.rs  health.rs  infer.rs  infer_on_nodes.rs  mod.rs  nl_query.rs  ontology_create.rs  ontology_relationship.rs  patrol.rs  query.rs  reason.rs  rules.rs  schema.rs  strike.rs  tools.rs  tools_call.rs
crates/ontology-storage/: ARCHITECTURE.md  Cargo.toml
crates/ontology-storage/src/: error.rs  factory.rs  lib.rs
crates/ontology-storage/src/adapters/: README.md  mod.rs
crates/ontology-storage/src/adapters/in_memory/: executor.rs  graph.rs  mod.rs
crates/ontology-storage/src/adapters/memgraph/: mod.rs
crates/ontology-storage/src/adapters/neo4j/: executor.rs  mod.rs  schema.rs
crates/ontology-storage/src/mapper/: README.md  iri_normalizer.rs  mod.rs  model_mapper.rs  property_converter.rs  query_plan.rs  unified_mapping.rs
crates/ontology-storage/src/mapper/cypher/: builder.rs  mod.rs  params.rs
crates/ontology-storage/src/mapper/graph/: mod.rs  node.rs  pattern.rs  property.rs  relationship.rs
crates/ontology-storage/src/mapper/llm/: mod.rs  prompt.rs  response.rs  schema.rs  tool.rs
crates/ontology-storage/src/ontology/: entity.rs  mod.rs  relationship.rs
crates/ontology-storage/src/repository/: README.md  graph_store.rs  mod.rs  transaction.rs
docs/adr/: ADR-007.md
false/ontology_reasoner-1nigwfa4avisc/s-hk1ce7v1ze-1jzjwv3-585irm6x1476jmz9rrxy0um5f/: metadata.rmeta
false/ontology_storage-0djnnqqp0al3f/s-hk1ce7pur2-06lyfca-9clk9cltragxo9sv27y9fp9a4/: metadata.rmeta
rules/: asw_rules.swrl
scripts/: create_p8a.py  import_all.py  import_props.py  import_types.py  patrol_sim.py  test_patrol.py  verify.py
src/: main.rs
