[package]
name = "ontology-reasoner"
version = "0.1.0"
edition = "2024"
description = "Ontology reasoning engine — DWL2 DL queries + SWRL rules + confidence fuse"
authors = ["梁晓亮"]

[dependencies]
ontology-storage = { path = "../ontology-storage" }
serde = { version = "1", features = ["derive"], optional = true }
serde_json = { version = "1", optional = true }
log = "0.4"

[features]
default = []
llm = ["dep:serde", "dep:serde_json", "ontology-storage/llm"]

[dev-dependencies]
ontology-storage = { path = "../ontology-storage", features = ["in-memory"] }
