[package]
name = "ontology-server"
version = "0.1.0"
edition = "2024"
description = "HTTP API server — LLM-accessible interface to the ontology reasoning engine"

[dependencies]
ontology-storage = { path = "../ontology-storage" }
ontology-reasoner = { path = "../ontology-reasoner" }
tiny_http = "0.12"
serde_json = "1"
log = "0.4"

[features]
default = ["neo4j"]
in-memory = ["ontology-storage/in-memory"]
neo4j = ["ontology-storage/neo4j"]
